infrastructure/configs/base/weave-gitops/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: weave-gitops
  namespace: flux-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`gitops-kube.finklea.ninja`)
      kind: Rule
      services:
        - name: weave-gitops
          namespace: flux-system
          port: 9001
  tls:
    secretName: star.finklea.ninja
